Fix toc alignment

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -100,24 +100,40 @@
 
 /* This is all you. */
 
+code {
+    font-family: 'IBM Plex Mono', monospace;
+    color: #4f4f4f;
+}
+
 ul.toc-list {
     list-style-type: none;
     padding-left: 10px;
     overflow: hidden;
-    position: relative;
+    margin: 0
 }
 
 .is-active-link::before {
     @apply bg-amp-blue-500;
 }
 
-a.toc-link {
-    display: block;
+.js-toc>.toc-list {
+    overflow: hidden;
+    position: relative;
+}
+
+.is-collapsible {
+    max-height: 1000px;
+    transition: all 300ms ease-in-out;
+    overflow: hidden;
 }
 
 .is-collapsed {
     max-height: 0;
-    display: none;
+}
+
+
+a.toc-link {
+    display: block;
 }
 
 .toc-list-item {
